crates/macro-tools/tests/ui/builder/fail/origin_default.stderr
error[E0599]: no function or associated item named `default` found for struct `Meta` in the current scope
 --> tests/ui/builder/fail/origin_default.rs:9:19
  |
4 | struct Meta {
  | ----------- function or associated item `default` not found for this struct
...
9 |     let _ = Meta::default();
  |                   ^^^^^^^ function or associated item not found in `Meta`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `default`, perhaps you need to implement it:
          candidate #1: `Default`
